# backend-api

./: .dockerignore  .env  Dockerfile  agent.py  appolo.py  bot_api.py  email_agent.py  email_sender.py  email_writer.py  insert_dummy.py  main.py  models.py  pyproject.toml  query_agent.py  requirements.txt  scheduler_agent.py  utils.py
code/: Email_sender.py  Email_writer.py  main_lead_final.py  pyproject.toml
tools/: apify_tool.py  apollo_tool.py  email_tool.py  hunteremail_tool.py  scheduler_tool.py  tavily_tool.py
