[project]
name = "backend-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.117.1",
    "fastapi-utils>=0.8.0",
    "fastapi-websocket-pubsub>=1.0.1",
    "motor>=3.7.1",
    "openai-agents>=0.3.1",
    "pinecone>=7.3.0",
    "pycountry>=24.6.1",
    "pytz>=2025.2",
    "tavily-python>=0.7.12",
    "timezonefinder>=8.1.0",
    "typing-inspect>=0.9.0",
]
