[project]
name = "hello-cloning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "earthengine-api>=1.6.4",
    "geopy>=2.4.1",
    "openai>=1.99.9",
    "openai-agents>=0.2.4",
    "pycountry>=24.6.1",
    "pymongo>=4.15.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.10",
    "timezonefinder>=8.0.0",
]
